squashing bugs, delete talking to backend but still not functioning

--- a/client/src/Components/UserHouses/_house.scss
+++ b/client/src/Components/UserHouses/_house.scss
@@ -22,7 +22,7 @@
             width: 40px;
             padding-left: 10px;
             padding-top: 10px;
-            z-index: 5;
+            z-index: 50;
             
         }
         .hearts:hover{
